<resources>
    <string name="app_name">Mementos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    // Para el menu
    <string name="menu_home">Recordatorios</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logOut">Cerrar Sesión</string>
    <string name="menu_settings">Configuraciones</string>
    <string name="menu_categories">Categorías</string>
    <string name="menu_rec">Recordatorios</string>

    //submenu ubicaciones
    <string name="menu_locations_title">Ubicaciones</string>
    <string name="menu_locations_saved">Mis ubicaciones</string>
    <string name="menu_locations_new">Nueva ubicación</string>
    <string name="write_address">Dirección</string>
    <string name="menu_locations_edit">Editar ubicación</string>
    <string name="menu_locations_delete">Eliminar</string>

    //submenu grupos
    <string name="menu_groups_title">Grupos</string>
    <string name="menu_groups_saved">Mis grupos</string>
    <string name="menu_groups_new">Nuevo grupo</string>
    <string name="menu_groups_edit">Editar grupo</string>
    <string name="menu_groups_image_title">Imagen de grupo</string>
    <string name="menu_groups_name">Nombre de grupo</string>
    <string name="menu_groups_description">Descripción de grupo</string>
    <string name="menu_groups_add_image">Escoger imagen</string>
    <string name="menu_groups_create_group">Crear grupo</string>

    // Para el login
    <string name="email_text_field">Correo</string>
    <string name="password_text_field">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="signup_button">Registrarse</string>
    <string name="login_error">La autenticación falló</string>
    <string name="logout">Cerrar sesión</string>
    <string name="error">Error</string>
    <string name="no_empty_email">El correo no puede estar vacío</string>
    <string name="no_empty_password">La contraseña no puede estar vacía</string>
    <string name="prefs_file">com.example.geoagenda.PREFERENCE_FILE_KEY</string>

    <string name="home_second">Home Second</string>
    <string name="google_maps_key">Poner la API KEY en algun archivo oculto</string>
    <string name="string">Nombre</string>
    <string name="string2">Nueva Ubicación</string>
    <string name="string_agregar">Agregar</string>

    //Para la interfaz de recordatorios
    <string name="reminder_text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula efficitur nunc non tincidunt. Ut at pharetra libero, ac volutpat ipsum. Integer non hendrerit dui. Suspendisse vehicula turpis id purus ullamcorper aliquet vitae ut nisl. Quisque accumsan malesuada velit ut consectetur. Suspendisse sit amet libero facilisis, lacinia leo nec, finibus eros. Aenean odio erat, pellentesque eget odio sed, congue congue sapien. Aliquam nisi neque, mattis id magna et, consectetur varius neque. Pellentesque dignissim dui at ipsum tincidunt rhoncus. Etiam posuere suscipit felis, in sollicitudin urna facilisis mattis. Vivamus malesuada eros velit, tincidunt hendrerit tortor consectetur at. Ut condimentum elit diam, at congue sapien aliquet nec. Aliquam euismod finibus ipsum. Nullam vestibulum aliquam ipsum, nec mattis nulla facilisis vitae. Donec at faucibus tortor. Quisque venenatis tincidunt libero, ac fringilla turpis porttitor vitae. </string>
    <string name="reminder_text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula efficitur nunc non tincidunt. Ut at pharetra libero, ac volutpat ipsum. Integer non hendrerit dui. Suspendisse vehicula turpis id purus ullamcorper aliquet vitae ut nisl. Quisque accumsan malesuada velit ut consectetur. Suspendisse sit amet libero facilisis, lacinia leo nec, finibus eros. Aenean odio erat, pellentesque eget odio sed, congue congue sapien. Aliquam nisi neque, mattis id magna et, consectetur varius neque. Pellentesque dignissim dui at ipsum tincidunt rhoncus. Etiam posuere suscipit felis, in sollicitudin urna facilisis mattis. Vivamus malesuada eros velit, tincidunt hendrerit tortor consectetur at. Ut condimentum elit diam, at congue sapien aliquet nec. Aliquam euismod finibus ipsum. Nullam vestibulum aliquam ipsum, nec mattis nulla facilisis vitae. Donec at faucibus tortor. Quisque venenatis tincidunt libero, ac fringilla turpis porttitor vitae. </string>
    <string name="reminder_image_text">Imagen recordatorio</string>
    <string name="location_icon_text">Icono de ubicacion</string>
    <string name="alarm_icon_text">Icono de alarma</string>
    <string name="voice_icon_text">Icono mensaje voz</string>

    //Para crear usuario
    <string name="create_user_title">Crear cuenta de usuario</string>
    <string name="string_user_name">Nombre</string>
    <string name="string_user_surname">Apellido</string>
    <string name="create_username">Nombre de usuario</string>
    <string name="create_email_text_field">Correo</string>
    <string name="create_password_text_field">Contraseña</string>
    <string name="repeat_password_text_field">Repetir contraseña</string>
    <string name="register_button">Crear cuenta</string>
    <string name="google_create_button">Utilizar cuenta de Google</string>
    <string name="create_account_cancel">Cancelar</string>

    //Para crear lugar
    <string name="create_location">Agregar lugar</string>
    <string name="title_activity_location">Map</string>
    <string name="title_activity_add_location">Map</string>
    <string name="agregar_imagen">Agregar imagen</string>

    //submenu categorias
    <string name="cat1_img_description">Imagen categoria 1</string>
    <string name="cat1_text_description">Default</string>
    <string name="cat2_img_description">Imagen categoria 2</string>
    <string name="cat2_text_description">Farmacia</string>
    <string name="cat3_img_description">Imagen categoria 3</string>
    <string name="cat3_text_description">Universidad</string>
    <string name="crear_grupo" />
    <string name="name">Agregar miembro</string>
    <string name="textview">Agregar miembro</string>
    <string name="todo">TODO</string>
    <string name="title_category">TITULO</string>

    //Crear recordatorio
    <string name="title_reminder">Título</string>
    <string name="description_reminder">Recordatorio</string>
    <string name="ingrese_email_para_invitar_a_un_usuario">Ingrese email para invitar a un usuario</string>
    <string name="email" />
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ingresa_un_email">Ingresa un email</string>
    <string name="open_gallery_button">Abrir Galeria</string>
    <string name="open_camera_button">Abrir Camara</string>
    <string name="save_image_button">Guardar</string>
    <string name="discard_image_button">Cancelar</string>
    <string name="unirse_a_un_grupo">Unirse a un grupo</string>
    <string name="invitaciones_para_unirse_a_grupos">Invitaciones para unirse a grupos</string>
    <string name="invitaciones_recibidas">Invitaciones recibidas</string>
    <string name="registrar_correo">Registrar correo</string>
    <string name="est_seguro_de_que_quiere_unirse_a_este_grupo">Está seguro de que quiere unirse a este grupo?</string>
    <string name="si">Si</string>
    <string name="no">No</string>

    <string name="grupos_que_administras">Grupos que administras</string>
    <string name="grupos">Grupos</string>
    <string name="seguro_de_eliminar_el_grupo">¿Seguro de eliminar el grupo?</string>

    <string name="cerrar">Cerrar</string>


    //Notificaciones
    <string name="notification">Recordatorio</string>
    <string name="notificationChannel">Este es el canal de notificaciones para la aplicación de recordatorios Mementos.</string>


    <string name="play">Reproducir</string>
    <string name="record">Grabar</string>
    <string name="stop">Parar</string>

</resources>
