<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_rec">

    <fragment
        android:id="@+id/nav_rec"
        android:name="com.example.geoagenda.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.geoagenda.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_locations_new"
        android:name="com.example.geoagenda.ui.addlocation.AddLocationFragment"
        android:label="@string/menu_locations_new"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/nav_locations_saved"
        android:name="com.example.geoagenda.ui.locations.LocationsFragment"
        android:label="@string/menu_locations_saved"
        tools:layout="@layout/fragment_addlocation"/>
    <fragment
        android:id="@+id/nav_locations_edit"
        android:name="com.example.geoagenda.ui.editlocation.EditLocationFragment"
        android:label="@string/menu_locations_edit"
        tools:layout="@layout/fragment_editlocation"/>

    <fragment
        android:id="@+id/nav_logOut"
        android:name="com.example.geoagenda.ui.logout.LogoutFragment"
        android:label="@string/menu_logOut"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.geoagenda.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.geoagenda.ui.mygroups.MygroupsFragment"
        android:label="@string/menu_groups_saved"
        tools:layout="@layout/fragment_mygroups"/>

    <fragment
        android:id="@+id/nav_groups_new"
        android:name="com.example.geoagenda.ui.addgroup.AddGroupFragment"
        android:label="@string/menu_groups_new"
        tools:layout="@layout/fragment_addgroup"/>
    <fragment
        android:id="@+id/nav_groups_edit"
        android:name="com.example.geoagenda.ui.editgroup.EditGroupFragment"
        android:label="@string/menu_groups_edit"
        tools:layout="@layout/fragment_editgroup"/>


</navigation>